--- a/index.html
+++ b/index.html
@@ -2,12 +2,91 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="/vite.svg" />
+    <link rel="icon" type="image/svg+xml" href="./src/assets/images/calendar icon.png" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Vite App</title>
+    <title>Reminder calendar</title>
   </head>
   <body>
-    <div id="app"></div>
+    <div id="app">
+      <div class="first-section">
+        <h1 class="main-title">Mi agenda para recordatorios</h1>
+        <h2 class="subtitle">Espacio personal para organizar el día a día</h2>
+      </div>
+
+      <div class="second-section">
+        <button class="add-reminder">Añade un recordatorio a tu agenda</button>
+        <br></br> <!-- cambiar por estilos en CSS -->
+        <form class="add-form">
+          <textarea id="add-textarea" class="add-textarea" placeholder="Escribe aquí tu recordatorio, por ejemplo: Salir a merendar a las 16:30"></textarea> <!-- Validación para que no se pueda guardar vacío. Campo obligatorio -->
+          <br></br> <!-- cambiar por estilos en CSS -->
+          <label for="week-day">¿Para qué día de la semana es este recordatorio?</label>
+          <select name="week-day" id="week-day" class="select-week-day">
+            <!-- <option value="weekDay">Día de la semana</option> -->
+            <option value="Mo">Lunes</option>
+            <option value="Tu">Martes</option>
+            <option value="We">Miércoles</option>
+            <option value="Th">Jueves</option>
+            <option value="Fr">Viernes</option>
+            <option value="St">Sábado</option>
+            <option value="Su">Domingo</option>
+          </select>
+          <!-- Validación para que ese día esté dentro del mes. Campo no obligatorio por si la persona aún no controla tanto la web. Que no pueda dejarse seleccionado el primer option -->
+           <br></br> <!-- cambiar por estilos en CSS -->
+           <label for="month-day">¿Para qué día del mes es este recordatorio?</label>
+           <select name="month-day" id="month-day">
+            <option value="1">1</option>
+            <option value="2">2</option>
+            <option value="3">3</option>
+            <option value="4">4</option>
+            <option value="5">5</option>
+            <option value="6">6</option>
+            <option value="7">7</option>
+            <option value="8">8</option>
+            <option value="9">9</option>
+            <option value="10">10</option>
+            <option value="11">11</option>
+            <option value="12">12</option>
+            <option value="13">13</option>
+            <option value="14">14</option>
+            <option value="15">15</option>
+            <option value="16">16</option>
+            <option value="17">17</option>
+            <option value="18">18</option>
+            <option value="19">19</option>
+            <option value="20">20</option>
+            <option value="21">21</option>
+            <option value="22">22</option>
+            <option value="23">23</option>
+            <option value="24">24</option>
+            <option value="25">25</option>
+            <option value="26">26</option>
+            <option value="27">27</option>
+            <option value="28">28</option>
+            <option value="29">29</option>
+            <option value="30">30</option>
+            <option value="31">31</option>
+           </select>
+           <br></br> <!-- cambiar por estilos en CSS -->
+           <label for="month">¿Para qué mes es este recordatorio?</label>
+           <select name="month" id="month">
+            <option value="Jan">Enero</option>
+            <option value="Feb">Febrero</option>
+            <option value="Mar">Marzo</option>
+            <option value="Apr">Abril</option>
+            <option value="May">Mayo</option>
+            <option value="Jun">Junio</option>
+            <option value="Jul">Julio</option>
+            <option value="Aug">Agosto</option>
+            <option value="Sep">Septiembre</option>
+            <option value="Oct">Octubre</option>
+            <option value="Nov">Noviembre</option>
+            <option value="Dec">Diciembre</option>
+           </select>
+           <br></br> <!-- cambiar por estilos en CSS -->
+           <button class="save-reminder">Guardar recordatorio</button>
+        </form>
+      </div>
+    </div>
     <script type="module" src="/src/main.js"></script>
   </body>
 </html>
