feat: creation of an API endpoint in MockAPI to create and get requests for data related to reminders, as well as saving them in localStorage when clicking on 'Save reminder'. Improvements to button events and forms already created, and continuation of the creation of the 'My reminders' section, with addEventListener to display them and indicate which ones have been completed or which ones you want to delete

--- a/index.html
+++ b/index.html
@@ -89,15 +89,13 @@
       </div>
       <div class="third-section">
         <h3 class="reminder-title">Mis recordatorios</h3>
-        <ul class="reminder-list">
-          <li></li>
-        </ul>
-    </div>
-    <div class="fourth-section">
-      <h3 class="all-reminders">Todos mis recordatorios</h3>
-      <h3 class="pending-reminders">Recordatorios pendientes</h3>
-      <h3 class="completed-reminders">Recordatorios completados</h3>
-    </div>
+        <ul id="reminder-list" class="reminder-list"></ul>
+      </div>
+      <div class="fourth-section">
+        <h3 class="all-reminders">Todos mis recordatorios</h3>
+        <h3 class="pending-reminders">Recordatorios pendientes</h3>
+        <h3 class="completed-reminders">Recordatorios completados</h3>
+      </div>
     <script type="module" src="/src/main.js"></script>
   </body>
 </html>
