feat(reminders): add completed section, delete API, validations and toast notifications
- Implemented 'Mis recordatorios' section with complete & delete buttons
- Added 'Recordatorios completados' section with greyed-out, strikethrough tasks
- Disabled complete button once a task is marked as done, but kept delete active
- Removed localStorage usage in main.js, now fully integrated with MockAPI (GET, POST, DELETE)
- Created utils/ folder with toastify.js (Toastify dependency) and validations.js (textarea validation)
- Styled complete/delete buttons (size, colors, backgrounds)

--- a/index.html
+++ b/index.html
@@ -92,9 +92,8 @@
         <ul id="reminder-list" class="reminder-list"></ul>
       </div>
       <div class="fourth-section">
-        <h3 class="all-reminders">Todos mis recordatorios</h3>
-        <h3 class="pending-reminders">Recordatorios pendientes</h3>
         <h3 class="completed-reminders">Recordatorios completados</h3>
+        <ul id="completed-list" class="reminder-list"></ul>
       </div>
     <script type="module" src="/src/main.js"></script>
   </body>
